TestCases/Errors/Haversine/observations/sst/sum_09_obs.spm
obs r8-c18 0.00555555555555556
obs r9-c18 0.00389278752436647
error_value r8-c18 0.2
error_value r9-c18 0.2
